# Kung-Fu-Chess-

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  generated_single_file.cpp  main.cpp  run.bat  run_server.bat
Client/: RemoteGameProxy.cpp  RemoteGameProxy.hpp
Core_Interfaces/: IGameView.hpp  IInputHandler.hpp
Logic/include/: BoardParser.hpp
Logic/include/board/: Board.hpp
Logic/include/collision/: CollisionSystem.hpp  ICollisionSystem.hpp
Logic/include/common/: Enums.hpp  GameState.hpp
Logic/include/engine/: GameEngine.hpp
Logic/include/events/: EventBus.hpp  GameEvents.hpp
Logic/include/game/: Game.hpp  GameController.hpp  IGameInputAdapter.hpp  RealTimeArbiter.hpp  UIInputAdapter.hpp
Logic/include/history/: GameRecord.hpp
Logic/include/input/: Controller.hpp
Logic/include/io/: BoardParser.hpp  BoardPrinter.hpp
Logic/include/model/: Board.hpp  Enums.hpp  GameConfig.hpp  GameState.hpp  IBoard.hpp  Position.hpp
Logic/include/model/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
Logic/include/movement/: MovementSystem.hpp
Logic/include/pieces/: King.hpp  Pawn.hpp  Piece.hpp
Logic/include/realtime/: RealTimeArbiter.hpp
Logic/include/rules/: IRuleEngine.hpp  PieceRules.hpp  RuleEngine.hpp
Logic/include/texttests/: ScriptRunner.hpp
Logic/src/: BoardParser.cpp
Logic/src/board/: Board.cpp
Logic/src/collision/: CollisionSystem.cpp
Logic/src/common/: Position.cpp
Logic/src/engine/: GameEngine.cpp
Logic/src/game/: Game.cpp  GameController.cpp  RealTimeArbiter.cpp  UIInputAdapter.cpp
Logic/src/history/: GameRecord.cpp
Logic/src/input/: Controller.cpp
Logic/src/io/: BoardParser.cpp  BoardPrinter.cpp
Logic/src/model/: Board.cpp  Position.cpp
Logic/src/model/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
Logic/src/movement/: MovementSystem.cpp
Logic/src/pieces/: Queen.cpp
Logic/src/realtime/: RealTimeArbiter.cpp
Logic/src/rules/: PieceRules.cpp  RuleEngine.cpp
Logic/src/texttests/: ScriptRunner.cpp
Logic/tests/: CMakeLists.txt
Logic/tests/integration/: GameIntegrationTests.cpp
Logic/tests/unit/: BoardTests.cpp  CollisionSystemTests.cpp  ConfigAndBoundaryTests.cpp  ControllerTests.cpp  CooldownPremoveTests.cpp  EventBusTests.cpp  GameCollisionTests.cpp  GameEventsTests.cpp  GameRealTimeTests.cpp  GameRecordTests.cpp  GameTests.cpp  JumpTests.cpp  MovementSystemTests.cpp  PawnTests.cpp  PieceRulesTests.cpp  PieceTests.cpp  PieceTypesTests.cpp  PositionTests.cpp  RuleEngineTests.cpp  TestHelpers.hpp  UIInputAdapterTests.cpp
Network/: Logger.cpp  Logger.hpp  Protocol.cpp  Protocol.hpp  WsClientTransport.cpp  WsClientTransport.hpp  WsServerTransport.cpp  WsServerTransport.hpp
Server/: AccountStore.cpp  AccountStore.hpp  Room.cpp  Room.hpp  main.cpp
UI/: AssetManager.cpp  AssetManager.hpp  CoordinateMapper.hpp  PieceAnimator.hpp  RemoteGameProxy.cpp  RemoteGameProxy.hpp  UsernamePrompt.cpp
UI/Core/: CoordinateMapper.hpp  PieceAnimator.cpp  SpriteSequence.cpp  SpriteSequence.hpp
UI/Geometry/: LayoutScale.hpp
UI/Img/: Color.hpp  img.cpp  img.hpp
UI/NetClient/: RemoteGameProxy.cpp  RemoteGameProxy.hpp
UI/OpenCV/: AssetManager.cpp  AssetManager.hpp  BoardRenderer.cpp  BoardRenderer.hpp  OpenCvView.cpp  OpenCvView.hpp  PieceAnimator.hpp  RenderConfig.hpp  ScoreboardRenderer.cpp  ScoreboardRenderer.hpp  SpriteSequence.hpp
UI/UI_OpenCV/: AssetManager.cpp  AssetManager.hpp  BoardRenderer.cpp  BoardRenderer.hpp  OpenCvView.cpp  OpenCvView.hpp  RenderConfig.hpp  ScoreboardRenderer.cpp  SoundPlayer.cpp  SoundPlayer.hpp
UI/Windows/: ChessTheme.cpp  ChessTheme.hpp  LoginScreen.cpp  LoginScreen.hpp  PlayConfirmScreen.cpp  PlayConfirmScreen.hpp  RoomChoiceScreen.cpp  RoomChoiceScreen.hpp  UsernamePrompt.cpp  UsernamePrompt.hpp
UI/assets/: python download_assets.py
VPL/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  BoardParser.cpp  BoardParser.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Game.cpp  Game.hpp  IBoard.hpp  ICollisionSystem.hpp  IGameInputAdapter.hpp  IRuleEngine.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  MovementSystem.cpp  MovementSystem.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  RuleEngine.cpp  RuleEngine.hpp  UIInputAdapter.cpp  UIInputAdapter.hpp  main.cpp
docs/: PHASE1_NETWORKING_GUIDE.md  PROJECT_GUIDE.md
include/: BoardParser.hpp
include/board/: Board.hpp  IBoard.hpp
include/collision/: CollisionSystem.hpp  ICollisionSystem.hpp
include/game/: Game.hpp  IGameInputAdapter.hpp  UIInputAdapter.hpp
include/movement/: MovementSystem.hpp
include/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/rules/: RuleEngine.hpp
scripts/: build_single_cpp.py
src/: BoardParser.cpp
src/board/: Board.cpp
src/collision/: CollisionSystem.cpp
src/common/: Position.cpp
src/game/: Game.cpp  GameController.cpp  RealTimeArbiter.cpp  UIInputAdapter.cpp
src/movement/: MovementSystem.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/rules/: RuleEngine.cpp
tests/integration/: GameIntegrationTests.cpp
tests/unit/: BoardTests.cpp  CollisionSystemTests.cpp  ConfigAndBoundaryTests.cpp  GameRealTimeTests.cpp  GameTests.cpp  JumpTests.cpp  MovementSystemTests.cpp  PawnTests.cpp  PieceTests.cpp  PieceTypesTests.cpp  PositionTests.cpp  RuleEngineTests.cpp  TestMain.cpp  UIInputAdapterTests.cpp
